@@ -5913,7 +5913,7 @@ nm_setting_ip_config_class_init(NMSettingIPConfigClass *klass)
      * to the most negative value of all active connections profiles.
      *
      * Zero selects a globally configured default value. If the latter is missing
-     * or zero too, it defaults to 50 for VPNs (including WireGuard) and 100 for
+     * or zero too, it defaults to -50 for VPNs (including WireGuard) and 100 for
      * other connections.
      *
      * Note that the priority is to order DNS settings for multiple active
